--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,8 @@ body, html
 .intro
 {
     text-align: center;
+    background-image: url(../assets/rail1.jpg);
+    background-size: cover;
     padding-top: 13%;
     padding-bottom: 13%;
     margin-bottom: 50px;
