--- a/css/main.css
+++ b/css/main.css
@@ -42,9 +42,10 @@ body, html
 }
 /*navigation*/
 #navigation {
-    max-width: inherit;
+    
 position: fixed;
 top: 0;
+max-width: 1500px;
 width: 100%;
 color: #ffffff;
 height: 35px;
