--- a/css/main.css
+++ b/css/main.css
@@ -30,22 +30,22 @@ footer, header, hgroup, menu, nav, section {
 }
 body, html
 {
-    background-image: url(../assets/dark.jpg);
+    /*background-image: url(../assets/dark.jpg);*/
     background-size: cover;
     opacity: 5;
+    width: 100%!important;
   
 }
 #body{
      background-color: #EDEDED !important;
-    margin-left: 60px;
-    max-width: 1200px;
+    
 }
 /*navigation*/
 #navigation {
     
 position: fixed;
 top: 0;
-max-width: 1500px;
+max-width: 100%;
 width: 100%;
 color: #ffffff;
 height: 35px;
@@ -140,66 +140,7 @@ color: gray;
 
 
 
-/*portfolio section*/
 
-.portfolio .col
-{
-    margin-bottom: 24px;
-    height: 300px;
-
-}
-
-.portfolio h5
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-}
-
-.portfolio h6
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 45px;
-}
-
-.portfolio hr
-{
-    width: 40px;
-    margin-bottom: 45px;
-}
-
-.portfolio .portfolio-holder
-{
-    
-    text-align: center;
-}
-
-.portfolio img
-{
-    width: 33%;
-   
-  
-}
-.row .img1{
-    position: absolute;
-  margin-top: 20px!important;
-   top:70%!important;
-
-    
-}
-.row .img1 a{
-    position: absolute;
-    text-align: left;
-}
-.row .img2{
-    position: absolute;
-   left: 60%;
-   top:243%;
-   width: 63%;
-   height: 60%;
-    
-}
 
 /*google chart*/
 .chart{
