back to top icon through

--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,8 @@ color: gray;
 {
     margin-bottom: 30px;
 }
+
+/*return to top button*/
 #return-to-top {
     position: fixed;
     bottom: 20px;
