--- a/css/main.css
+++ b/css/main.css
@@ -34,15 +34,19 @@ body, html
     background-size: cover;
     opacity: 5;
     width: 100%!important;
-  
+
 }
 #body{
      background-color: #EDEDED !important;
-    
+
+}
+#banner{
+    height: 100%;
+     height: 100vh;
 }
 /*navigation*/
 #navigation {
-    
+
 position: fixed;
 top: 0;
 max-width: 100%;
@@ -84,14 +88,14 @@ color: gray;
 }
 
 .intro h1
-{   
+{
     font-family: 'Slabo 27px', serif;
     font-weight: 900;
     text-transform: uppercase;
 }
 
 .intro h5
-{   
+{
     font-family: 'Slabo 27px', serif;
     text-transform: uppercase;
     background-color: #f5f5f5;
@@ -170,7 +174,7 @@ color: gray;
 .portfolio .one
 {
     width: 33%;
-    
+
     float: left;
 }
 .portfolio .portfolio-holder2
@@ -182,7 +186,7 @@ color: gray;
 .portfolio .two
 {
     width: 33%;
-   
+
     padding: left;
 }
 
@@ -277,4 +281,11 @@ color: gray;
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+/*button*/
+.about_button{
+      position:relative;
+      top:30px;
+
+
 }
