--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -23,238 +11,202 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
 }
-body, html
-{
-    /*background-image: url(../assets/dark.jpg);*/
-    background-size: cover;
-    opacity: 5;
-    width: 100%!important;
+body, html {
+  /*background-image: url(../assets/dark.jpg);*/
+  background-size: cover;
+  opacity: 5;
+  width: 100%!important;
+}
+#body {
+  background-color: #EDEDED !important;
+}
+#banner {
+  height: 100%;
+  height: 100vh;
+}
+.intro {
+  text-align: center;
+  background-image: url(../assets/laptop4.jpg);
+  opacity: ;
+  background-size: cover;
+  padding-top: 13%;
+  padding-bottom: 13%;
+  margin-bottom: 50px;
+}
+.intro h1 {
+  font-family: 'Slabo 27px', serif;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.intro h5 {
+  font-family: 'Slabo 27px', serif;
+  text-transform: uppercase;
+  background-color: #f5f5f5;
+  padding: 10px;
+  color: #333333;
+  display: inline-block;
+  font-size: 1.2rem;
+}
+.social i {
+  margin-top: 5px;
+  color: white;
+  padding: 10px;
+}
 
-}
-#body{
-     background-color: #EDEDED !important;
-
-}
-#banner{
-    height: 100%;
-     height: 100vh;
-}
-
-.intro
-{
-    text-align: center;
-    background-image: url(../assets/laptop4.jpg);
-    opacity: ;
-    background-size: cover;
-    padding-top: 13%;
-    padding-bottom: 13%;
-    margin-bottom: 50px;
-}
-
-.intro h1
-{
-    font-family: 'Slabo 27px', serif;
-    font-weight: 900;
-    text-transform: uppercase;
-}
-
-.intro h5
-{
-    font-family: 'Slabo 27px', serif;
-    text-transform: uppercase;
-    background-color: #f5f5f5;
-    padding: 10px;
-    color: #333333;
-    display: inline-block;
-    font-size: 1.2rem;
-}
-.social i{
-    margin-top: 5px;
-    color: white;
-    padding: 10px;
-}
 /*about me*/
-.about{
-    padding: 10px;
+
+.about {
+  padding: 10px;
 
 }
-.me{
-    height: 200px!important;
-}
-.about p{
-    font-family: 'Slabo 27px', serif;
-    font-size: 25px;
-}
-.about .col
-{
-    margin-bottom: 24px;
-}
+.me {
+  height: 150px!important;
 
-
-.about h5
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 15px;
 }
-
-.about h3
-{
-    padding-top: 10px;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 45px;
+.about p {
+  font-family: 'Slabo 27px', serif;
+  font-size: 25px;
+}
+.about .col {
+  margin-bottom: 24px;
+}
+.about h5 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+.about h3 {
+  padding-top: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 45px;
+}
+.skills{
+   height: 600px;
 }
 
 /*portfolio*/
-.portfolio .col
-{
-    margin-bottom: 24px;
-    display: inline-block;
 
+.portfolio .col {
+  margin-bottom: 24px;
+  display: inline-block;
 }
-
-.portfolio h5
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 15px;
+.portfolio h5 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
-
-.portfolio h6
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 45px;
+.portfolio h6 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 45px;
 }
-
-
-.portfolio .portfolio-holder
-{
-    clear: both;
-    text-align: center;
+.portfolio .portfolio-holder {
+  clear: both;
+  text-align: center;
 }
-
-.portfolio .one
-{
-    width: 33%;
-
-    float: left;
+.portfolio .one {
+  width: 33%;
+  float: left;
 }
-.portfolio .portfolio-holder2
-{
-    clear: both;
-    text-align: center;
+.portfolio .portfolio-holder2 {
+  clear: both;
+  text-align: center;
 }
-
-.portfolio .two
-{
-    width: 33%;
-
-    padding: left;
+.portfolio .two {
+  width: 33%;
+  padding: left;
 }
-
-
-
-
 
 /*google chart*/
-.chart{
-    margin-top: 70px;
+
+.chart {
+  margin-top: 70px;
 }
+
 /*contact*/
-.contact .col
-{
-    margin-bottom: 24px;
-}
 
-.contact h5
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 15px;
+.contact .col {
+  margin-bottom: 24px;
 }
-
-.contact h6
-{
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 45px;
+.contact h5 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
-
-.contact hr
-{
-    width: 40px;
-    margin-bottom: 45px;
+.contact h6 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 45px;
 }
-
-.contact .contact-holder
-{
-    padding-left: 40px;
-    text-align: left;
+.contact hr {
+  width: 40px;
+  margin-bottom: 45px;
 }
-
-.contact .contact-holder h6
-{
-    margin-bottom: 15px;
-    text-align: left;
+.contact .contact-holder {
+  padding-left: 40px;
+  text-align: left;
 }
-
-.contact .contact-holder p
-{
-    margin-bottom: 30px;
+.contact .contact-holder h6 {
+  margin-bottom: 15px;
+  text-align: left;
+}
+.contact .contact-holder p {
+  margin-bottom: 30px;
 }
 
 /*return to top button*/
+
 #return-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.7);
-    width: 50px;
-    height: 50px;
-    display: block;
-    text-decoration: none;
-    -webkit-border-radius: 35px;
-    -moz-border-radius: 35px;
-    border-radius: 35px;
-    display: none;
-    -webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 #return-to-top i {
-    color: #fff;
-    margin: 0;
-    position: relative;
-    left: 16px;
-    top: 13px;
-    font-size: 19px;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 #return-to-top:hover {
-    background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.9);
 }
 #return-to-top:hover i {
-    color: #fff;
-    top: 5px;
+  color: #fff;
+  top: 5px;
 }
+
 /*button*/
-.about_button{
-      position:relative;
-      top:30px;
 
-
+.about_button {
+  position: relative;
+  top: 30px;
 }
