added the bounce in left animation to banner

--- a/css/main.css
+++ b/css/main.css
@@ -223,3 +223,9 @@ body, html {
   -webkit-moz-animation-duration: 6s;
   -webkit-animation-delay: 2s;
 }
+.bounceInLeft{
+  animation-name: .bounceInLeft;
+  animation-name: .bounceInLeft;
+  -webkit-moz-animation-duration: 6s;
+  -webkit-animation-delay: 2s;
+}
